--- a/package.json
+++ b/package.json
@@ -4,17 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "cd server && node index.js",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "author": "Joel Aro",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "mongodb": "^3.5.9",
-    "mongoose": "^5.9.19"
-  }
+  "license": "ISC"
 }
